--- a/form.html
+++ b/form.html
@@ -71,7 +71,7 @@
 
     <footer>
       <p align="center">
-        <em> <b>Thank you for exploring the wonders of space exploration with us!</b></em>
+        ⭐<em> <b>Thank you for exploring the wonders of space exploration with us!</b></em>⭐
       </p>
     </footer>
   </body>
