--- a/form.html
+++ b/form.html
@@ -3,12 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script:wght@400;500;600;700&family=Playfair+Display:wght@500&family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;1,200&display=swap"
+      rel="stylesheet"
+    />
     <title>Form Page</title>
   </head>
-  <body bgColor="#192a56" text="#0097e6">
+  <body
+    bgcolor="#192a56"
+    text="#fff"
+    style=" font-family: 'Poppins', sans-serif;font-family: 'Playfair Display', serif;"
+  >
     <section id="registration">
       <h2 align="center"><u>Registration Form</u>📄</h2>
-      <form align="center"  action="#" method="POST">
+      <form align="center" action="#" method="POST">
         <table align="center" border="10">
           <tr>
             <td>Name:</td>
@@ -71,7 +81,12 @@
 
     <footer>
       <p align="center">
-        ⭐<em> <b>Thank you for exploring the wonders of space exploration with us!</b></em>⭐
+        ⭐<em>
+          <b
+            >Thank you for exploring the wonders of space exploration with
+            us!</b
+          ></em
+        >⭐
       </p>
     </footer>
   </body>
