--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;1,200&display=swap" rel="stylesheet">
     <title>About Space Exploration</title>
 </head>
 <body>
-    <body bgColor="#00a8ff"text="white" >
+    <body bgColor="#1B9CFC"text="white" style=" font-family: 'Poppins', sans-serif; font-family: 'Croissant One', cursive;" >
         <header >
-          <h1 align="center"><u>About Space Exploration🛰️</u></h1>
+          <h1 align="center"><u>About Space Exploration</u>🛰️</h1>
         </header>
       
           <section>
@@ -18,8 +21,8 @@
             </p>
           <center>
             <picture>
-              <img src="https://c1.wallpaperflare.com/preview/719/149/146/astronaut-astronomy-satellite-moon.jpg" alt="astronaut" width="700px" height="450px" />
-        <figcaption align="center"><b>Astronaut in space</b></figcaption>
+              <img src="astronaut.jpg" alt="astronaut" width="700px" height="450px" />
+        <figcaption align="center"><b>✨Astronaut in space✨</b></figcaption>
             </picture>
           </center>
           <h2 align="center"><u>History</u>☄️</h2>
